Bug 8139 - add margin to recent comments CSS to fix stuff with menus
Simple CSS change, fixes the problem with left navigation
overlapping list of recent comments on small screens in OPAC.

--- a/koha-tmpl/opac-tmpl/prog/en/css/opac.css
+++ b/koha-tmpl/opac-tmpl/prog/en/css/opac.css
@@ -2168,6 +2168,7 @@ div.ft {
 #recentcomments {
 	margin:auto;
 	max-width:750px;
+    margin-left: 13.3207em;
 }
 
 .searchresults .commentline {
